--- a/recipes/applesauce-pancakes.html
+++ b/recipes/applesauce-pancakes.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="/recipes/applesauce-pancakes.html">Applesauce Pancakes</a>
+    <h1>Applesauce Pancakes</h1>
 </body>
 </html>
