Wrote out recipe for applesauce-pancakes.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="/recipes/applesauce-pancakes.html">Applesauce Pancakes</a>
+    <ul>
+        <li><a href="/recipes/applesauce-pancakes.html">Applesauce Pancakes</a></li>
+    </ul>
 </body>
 </html>
