--- a/recipes/applesauce-pancakes.html
+++ b/recipes/applesauce-pancakes.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Applesauce Pancakes</h1>
+    <img src="https://images-gmi-pmc.edge-generalmills.com/65312e9f-5447-4b5e-8fe6-fbcd8f2fcf28.jpg" alt="">
+    <h2>Description</h2>
+    <p>Enjoy a soft fluffy gluten-free breakfast with these easy to make applesauce pancakes! Whip these up in just a few minutes with only <strong>three</strong> ingredients!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup unsweetened applesauce</li>
+        <li>1 egg</li>
+        <li>1/3 cup + 1 tbsp ground oats or oat flour</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Combine oats, egg, and applesauce into a mixing bowl.</li>
+        <li>Whisk ingredients until they are combined (the batter will be slightly lumpy). Do not over mix.</li>
+        <li>spray a large frying pan or griddle with cooking spray, or dampen a paper towl with vegetable oil and rub the top of the pan. Heat the pan over medium-low heat and add pancake batter using a 1/4 measuring cup. Fit as many that will fit in your pan or griddle.</li>
+        <li>Cook for 1 - 2 minutes or until small bubbles begin to form on the surface, and the edges have set. Flip the pancake over and cook for another 1 - 2 minutes until the other side is also a golden brown.</li>
+        <li>Remove from pan and enjoy. =)</li>
+    </ol>
 </body>
 </html>
