Add recipe to site.

--- a/recipes/applesauce-pancakes.html
+++ b/recipes/applesauce-pancakes.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Applesauce Pancakes</title>
 </head>
 <body>
     <h1>Applesauce Pancakes</h1>
-    <img src="https://images-gmi-pmc.edge-generalmills.com/65312e9f-5447-4b5e-8fe6-fbcd8f2fcf28.jpg" alt="">
+    <img src="https://images-gmi-pmc.edge-generalmills.com/65312e9f-5447-4b5e-8fe6-fbcd8f2fcf28.jpg" alt="applesauce-pancakes">
     <h2>Description</h2>
     <p>Enjoy a soft fluffy gluten-free breakfast with these easy to make applesauce pancakes! Whip these up in just a few minutes with only <strong>three</strong> ingredients!</p>
     <h2>Ingredients</h2>
